<!--
  ~ Copyright (c) 2022 Emanuel Machado da Silva
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->
<resources>
    <string name="app_name">Bill\'s Piggy Bank</string>

    <!-- Common terms -->
    <string name="amount">Amount</string>
    <string name="budget">Budget</string>
    <string name="payee">Payee</string>

    <!-- Monthly Budget -->
    <string name="add_content_description">Add new transaction</string>

    <!-- Add Transaction -->
    <string name="add_transaction">Add Transaction</string>
    <string name="amount_prefix">$</string>

    <!-- Expenses -->
    <string name="expenses">Expenses</string>
</resources>
